--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <div class="container">
     <div class="search-box">
         <i class="fa-solid fa-location-dot"></i>
-        <input type="text" placeholder="Enter your location" pattern="[A-Za-z0-9]+">
+        <input type="text" placeholder="Tulis kotamu coy" pattern="[A-Za-z0-9]+">
         <button id="clear" class="fa-sharp fa-solid fa-circle-xmark" style="display:none"></button>
         <button id="search" class="fa-solid fa-magnifying-glass"></button>
     </div>
 
     <div class="not-found">
         <img src="images/404.png">
-        <p>Oops! Invalid Location :/</p>
+        <p>Gak ono ik wkwk</p>
     </div>
 
     <div class="weather-box">
